# exsa-engine

./: .env.example  .gitignore  .rust-analyzer.toml  BUILD_SYSTEM.md  Cargo.toml  LICENSE  Makefile  PERFORMANCE_TEST_LOG.md  README.md  brutal_benchmark.sh  build-engine.sh  clean.sh  enhanced_benchmark.sh  final_benchmark.sh
.docs/: P0_IMPLEMENTATION.md  ROADMAP_UPDATE.md
docs/: BEAST_MODE_VERIFICATION.md  BUILD_SCRIPT_EXPLAINED.md  COMPETITIVE_ANALYSIS.md  ENGINE_UNIVERSALITY_EXPLAINED.txt  LFM2_ENGINE_ANALYSIS.txt  PERFORMANCE_METRICS.md  README.md  UNIVERSAL_BUILD_SYSTEM.md
docs/adocs/: ADVANCED_FEATURES_SUMMARY.md  ADVANCED_SAMPLERS_COMPLETE.md  BINARY-MISSING-EXPLANATION.md  BRUTAL_1.json  BRUTAL_2.json  BRUTAL_3.json  BRUTAL_TEST_1.json  BRUTAL_TEST_2.json  BRUTAL_TEST_3.json  CODE_CHANGES_VERIFICATION.md  CRITICAL_TEST.json  DYNAMIC_LOADING_COMPLETE.md  DYNAMIC_LOADING_PROGRESS.md  FINAL-PERFORMANCE-RESULTS.md  FUTURE_IMPROVEMENTS.md  GPU_SUPPORT.md  HARDWARE-PERFORMANCE-GUIDE.md  HARD_PROMPT_TEST_REPORT.md  HARD_TEST.req_end  HARD_TEST.req_start  HARD_TEST.start  OPTIONS_COMPARISON.md  PERFORMANCE_VARIATION_EXPLAINED.md  PERFORMANCE_VERDICT.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_PROGRESS.md  PHASE3_FINAL.md  PHASE3_INTEGRATION.md  PHASE3_PROGRESS.md  PRODUCTION_FIX_TEST_REPORT.md  PRODUCTION_READINESS_ANALYSIS.md  ROLLING_CONTEXT_PROGRESS.md  STARTUP-TIME-ANALYSIS.md  STARTUP_FAILURE_ANALYSIS.md  TECH_STACK.md  UNIVERSAL-VS-HARDWARE-SPECIFIC.md  VERIFICATION_COMPLETE.md  simple_test.json
models/: .gitkeep
src/: lib.rs  main.rs
src/api/: chat.rs  handlers.rs  lifecycle.rs  mod.rs  openai.rs  rag.rs  routes.rs  schema.rs
src/config/: mod.rs
src/inference/: batch_manager.rs  context.rs  context_config.rs  engine.rs  kv_cache.rs  mod.rs  params.rs  queue.rs  speculative.rs  templates.rs
src/metrics/: mod.rs
src/model/: config.rs  loader.rs  manager.rs  mod.rs
src/rag/: config.rs  embed.rs  mod.rs  models.rs  qdrant.rs  service.rs
src/session/: mod.rs
src/tests/: mod.rs
src/utils/: benchmark.rs  config.rs  (+3 more)
(+2 files in other folders)
